WCAG: fix contrast in school details section
* makes text just a shade darker so light font color is more visible against it.

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ a:hover .fa-stack-1x {
 
 ul.school-details {
 	list-style: none;
-	background: #7e7d7d;
+	background: #696767;
 	color: white;
 	margin-top: 35px;
 	padding: 1em;
@@ -200,7 +200,7 @@ ul.school-details {
 
 .school-details .fa {
 	margin-right: 0.5em;
-	color: #7e7d7d;
+	color: #696767;
 }
 .school-details .fa-inverse {
 	color: white;
